--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Type Hinting</title>
     <script src="hinting_script.js"></script>
+    <style>
+        #mylist_tag {
+            height: 200px;
+            overflow-y:scroll;
+        }
+    </style>
 </head>
 <body>
     <fieldset>
@@ -24,6 +30,7 @@
         // console.log(el)
         mybody.innerHTML = el.length+" resultats."
         let mylist = document.createElement('ol')
+        mylist.setAttribute('id', 'mylist_tag')
         mybody.appendChild(mylist)
         if (el.length < 50){
             for (let i = 0; i < el.length; i++) {
