styling display list

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <style>
         #mylist_tag {
             height: 200px;
+            width: 150px;
             overflow-y:scroll;
+            font-family: sans-serif;
         }
+        li {
+            margin: 5px 0;
+        }
+        li:nth-child(2n+0) {
+            background: #C0C0C0;
+        }
+
     </style>
 </head>
 <body>
